--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/car.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dream Car Crafters</title>
+    <title>TunedTreasures</title>
   </head>
   <body>
     <noscript>You must enable JavaScript in order this website to function</noscript>
